# mtproto-uploader-api

./: .env.example  __init__.py  cli.py  generate_session.py  pyproject.toml  render.yaml  requirements.txt  setup.py
api/: auth.py  server.py
core/: downloader.py  pipeline.py  uploader.py
examples/: aiogram_bot.py  ptb_bot.py  telebot_bot.py
